--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -11,10 +11,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <!-- Sobre nos -->
+    <section class="container">
         <h2>Sobre Nós</h2>   
         <img class="img-responsive" src="img/empresa.jpg"> 
-        <!-- panels -->
         <div class="panel-group" id="paineis-sobre">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -47,6 +47,56 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <!-- banner -->
+    <div class="jumbotron">
+        <div class="container">
+            <h3>Mais de 300 prêmios em design e em conforto </h3>
+            <p>Mais de 5 milhões de clientes satisfeitos em todo o mundo </p>
+        </div>
+   </div>
+    <!-- Projetos -->
+    <section class="container">
+        <h2>Nossos Projetos</h2>
+        <figure class="thumbnail">
+            <img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
+            <figcaption class="caption">
+                 <h3>Casa Castelo</h3>
+                 <p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+            </figcaption>
+        </figure>
+
+        <figure class="thumbnail">
+            <img src="img/projetos/casa-lago.png" alt="Foto da Casa Lago">
+            <figcaption class="caption">
+                <h3>Casa Lago</h3>
+                <p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>
+            </figcaption>
+        </figure>
+
+        <figure class="thumbnail">
+            <img src="img/projetos/mercado-marapira.png" alt="Foto do Mercado Marapira">
+            <figcaption class="caption">
+                <h3>Mercado Marapira</h3>
+                <p>O mercado Marapira foi projetado nos mínimos detalhes na arquitetura baseada em frutas.
+            </figcaption>
+        </figure>
+
+        <figure class="thumbnail">
+            <img src="img/projetos/palacio-dionisio.png" alt="Foto do Palácio Dionísio">
+            <figcaption class="caption">
+                <h3>Palácio Dionísio</h3>
+                <p>O palácio Dionísio foi eleito pela revista 'Grandes palácios' como o palácio mais lindo do mundo.</p>
+            </figcaption>
+        </figure>
+
+        <figure class="thumbnail">
+            <img src="img/projetos/residencia-ludi.png" alt="Foto da Residência Ludi">
+            <figcaption class="caption">
+                <h3>Residência Ludi</h3>
+                <p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
+            </figcaption>
+        </figure>
+    </section>
 </body>
 </html>
