--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -98,5 +98,48 @@
             </figcaption>
         </figure>
     </section>
+    <!-- Carousel -->
+    <section>
+        <h3 class="titulo-depoimentos">Depoimentos de Clientes </h3>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0"> </li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"> </li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"> </li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="img/depoimentos/depoimento1.png">
+                    <div class="carousel-caption">
+                        <h3>Yuri Padilha</h3>
+                        <p>Gostei muito e achei rápido o serviço</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/depoimentos/depoimento2.png">
+                    <div class="carousel-caption">
+                        <h3>Fernando Stafaneni</h3>
+                        <p>Excelente trabalho.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/depoimentos/depoimento3.png">
+                    <div class="carousel-caption">
+                        <h3>Caio Sauzas</h3>
+                        <p>Gostei, competência em primeiro lugar.</p>
+                    </div>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
