--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <script src="js/jquery.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <title>TopCasaFina</title>
 </head>
 <body>
     <!-- Sobre nos -->
@@ -141,5 +141,12 @@
             </a>
         </div>
     </section>
+    <!-- Video institucional -->
+    <div class="container">
+        <h2>Vídeo Institucional</h2>
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Hyv5dY38Ep0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>    
+    </div>
 </body>
 </html>
