--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -142,11 +142,33 @@
         </div>
     </section>
     <!-- Video institucional -->
-    <div class="container">
+    <section class="container">
         <h2>Vídeo Institucional</h2>
         <div class="embed-responsive embed-responsive-16by9">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Hyv5dY38Ep0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>    
-    </div>
+    </section>
+    <!-- Form -->
+    <section>
+        <h2>Contato</h2>
+        <p>Entre em contato conosco</p>
+
+    <form>
+        <div class="form-group">
+            <label for="contato-name"> Nome:</label>
+            <input class="form-control" id="contato-name" type="text" placeholder="Seu nome">
+        </div>    
+
+        <div class="form-group">
+            <label for="contato-email">Email</label>
+            <div class="input-group">
+                    <div class="input-group-addon">@</div>
+                    <input type="email" class="form-control" id="contato-email">
+            </div>
+        </div>
+
+    </form>  
+
+</section>
 </body>
 </html>
