--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -100,7 +100,7 @@
     </section>
     <!-- Carousel -->
     <section>
-        <h3 class="titulo-depoimentos">Depoimentos de Clientes </h3>
+        <h3 class="container titulo-depoimentos">Depoimentos de Clientes </h3>
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -149,7 +149,7 @@
         </div>    
     </section>
     <!-- Form -->
-    <section>
+    <section class="container">
         <h2>Contato</h2>
         <p>Entre em contato conosco</p>
 
@@ -163,12 +163,33 @@
             <label for="contato-email">Email</label>
             <div class="input-group">
                     <div class="input-group-addon">@</div>
-                    <input type="email" class="form-control" id="contato-email">
+                    <input type="email" class="form-control" id="contato-email" placeholder="Seu email">
             </div>
         </div>
-
+        <!-- radio -->
+        <div class="grupo-radio">
+            <div class="radio">
+                <label>
+                    <input type="radio" name="tipo-pessoa" checked> 
+                    Pessoa Física
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="tipo-pessoa" checked> 
+                    Pessoa Jurídica
+                </label>
+            </div>
+        </div><!--
+          
+        --><select class="contato-select form-control">
+            <option disabled selected>Tipo de Situação</option>
+            <option>Casa</option>
+            <option>Apartamento</option>
+            <option>Mansão</option>
+        </select>
+        <button class="btn btn-primary" type="submit">Enviar</button>
     </form>  
-
 </section>
 </body>
 </html>
