--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -152,44 +152,55 @@
     <section class="container">
         <h2>Contato</h2>
         <p>Entre em contato conosco</p>
+        <form>
+            <div class="form-group">
+                <label for="contato-name"> Nome:</label>
+                <input class="form-control" id="contato-name" type="text" placeholder="Seu nome">
+            </div>    
 
-    <form>
-        <div class="form-group">
-            <label for="contato-name"> Nome:</label>
-            <input class="form-control" id="contato-name" type="text" placeholder="Seu nome">
-        </div>    
-
-        <div class="form-group">
-            <label for="contato-email">Email</label>
-            <div class="input-group">
-                    <div class="input-group-addon">@</div>
-                    <input type="email" class="form-control" id="contato-email" placeholder="Seu email">
+            <div class="form-group">
+                <label for="contato-email">Email</label>
+                <div class="input-group">
+                        <div class="input-group-addon">@</div>
+                        <input type="email" class="form-control" id="contato-email" placeholder="Seu email">
+                </div>
             </div>
-        </div>
-        <!-- radio -->
-        <div class="grupo-radio">
-            <div class="radio">
-                <label>
-                    <input type="radio" name="tipo-pessoa" checked> 
-                    Pessoa Física
-                </label>
-            </div>
-            <div class="radio">
-                <label>
-                    <input type="radio" name="tipo-pessoa" checked> 
-                    Pessoa Jurídica
-                </label>
-            </div>
-        </div><!--
-          
-        --><select class="contato-select form-control">
-            <option disabled selected>Tipo de Situação</option>
-            <option>Casa</option>
-            <option>Apartamento</option>
-            <option>Mansão</option>
-        </select>
-        <button class="btn btn-primary" type="submit">Enviar</button>
-    </form>  
-</section>
+            <!-- radio -->
+            <div class="grupo-radio">
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="tipo-pessoa" checked> 
+                        Pessoa Física
+                    </label>
+                </div>
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="tipo-pessoa" checked> 
+                        Pessoa Jurídica
+                    </label>
+                </div>
+            </div><!--
+            
+            --><select class="contato-select form-control">
+                <option disabled selected>Tipo de Situação</option>
+                <option>Casa</option>
+                <option>Apartamento</option>
+                <option>Mansão</option>
+            </select>
+            <button class="btn btn-primary" type="submit">Enviar</button>
+        </form>  
+    </section>
+    <!-- Rodape -->
+    <footer>
+        <address>
+            <strong>TopCasaFina Arquitetura</strong><br>
+            Rua Vergueiro, 3185, Vila Mariana<br>
+            São Paulo, SP<br>
+            Tel: (11) 5571-2751 ou 5083-3884
+        </address>
+        <address>
+             Email: contato.topcasafina@alura.com.br
+        </address>
+        </footer>
 </body>
 </html>
