--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="estilos.css">
-    <script src="js/jquery.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
     <title>TopCasaFina</title>
 </head>
 <body>
@@ -36,6 +34,11 @@
                 </div>
             </div>
         </nav>
+        <div class="topCasaFina-banner">
+            <h1>TopCasaFina Arquitetura</h1>
+            <p>Projetando a casa dos sonhos desde 2000 A.C.</p>
+            <button class="btn btn-primary"> Contate-nos agora</button>
+        </div>
     </header>
     <!-- Sobre nos -->
     <section class="container" id="sobre-nos">
@@ -227,6 +230,9 @@
         <address>
              Email: contato.topcasafina@alura.com.br
         </address>
-        </footer>
+    </footer>
+    <script src="js/jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/navbar-animation-fix.js"></script>
 </body>
 </html>
