--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -43,35 +43,37 @@
     <!-- Sobre nos -->
     <section class="container" id="sobre-nos">
         <h2>Sobre Nós</h2>   
-        <img class="img-responsive" src="img/empresa.jpg"> 
-        <div class="panel-group" id="paineis-sobre">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title" data-toggle="collapse" data-target="#first" data-parent="#paineis-sobre">Desde 1932</h3>
-                </div>
-                <div id="first" class="collapse">
-                    <div class="panel-body">
-                        <p>Desde 1935 trazendo casas, mansões e prédios lindos para todo o mundo.</p>
+        <div class="row">
+            <img class="img-responsive col-sm-6" src="img/empresa.jpg"> 
+            <div class="panel-group col-sm-6" id="paineis-sobre">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" data-toggle="collapse" data-target="#first" data-parent="#paineis-sobre">Desde 1932</h3>
+                    </div>
+                    <div id="first" class="collapse">
+                        <div class="panel-body">
+                            <p>Desde 1935 trazendo casas, mansões e prédios lindos para todo o mundo.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title" data-toggle="collapse" data-target="#second" data-parent="#paineis-sobre">Preços acessíveis</h3>
-                </div>
-                <div id="second" class="collapse">
-                    <div class="panel-body">
-                        <p>Preços a partir de R$ 1000,00.</p>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" data-toggle="collapse" data-target="#second" data-parent="#paineis-sobre">Preços acessíveis</h3>
+                    </div>
+                    <div id="second" class="collapse">
+                        <div class="panel-body">
+                            <p>Preços a partir de R$ 1000,00.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title" data-toggle="collapse" data-target="#third" data-parent="#paineis-sobre">Alegria em colaborar para um mundo mais bonito</h3>
-                </div>
-                <div id="third" class="collapse">
-                    <div class="panel-body">
-                        <p>Trazendo alegria para a vida das pessoas que tem dinheiro para gastar.</p>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" data-toggle="collapse" data-target="#third" data-parent="#paineis-sobre">Alegria em colaborar para um mundo mais bonito</h3>
+                    </div>
+                    <div id="third" class="collapse">
+                        <div class="panel-body">
+                            <p>Trazendo alegria para a vida das pessoas que tem dinheiro para gastar.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,49 +89,59 @@
     <!-- Projetos -->
     <section id="nossos-projetos" class="container">
         <h2>Nossos Projetos</h2>
-        <figure class="thumbnail">
-            <img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
-            <figcaption class="caption">
-                 <h3>Casa Castelo</h3>
-                 <p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
-            </figcaption>
-        </figure>
-
-        <figure class="thumbnail">
-            <img src="img/projetos/casa-lago.png" alt="Foto da Casa Lago">
-            <figcaption class="caption">
-                <h3>Casa Lago</h3>
-                <p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>
-            </figcaption>
-        </figure>
-
-        <figure class="thumbnail">
-            <img src="img/projetos/mercado-marapira.png" alt="Foto do Mercado Marapira">
-            <figcaption class="caption">
-                <h3>Mercado Marapira</h3>
-                <p>O mercado Marapira foi projetado nos mínimos detalhes na arquitetura baseada em frutas.
-            </figcaption>
-        </figure>
-
-        <figure class="thumbnail">
-            <img src="img/projetos/palacio-dionisio.png" alt="Foto do Palácio Dionísio">
-            <figcaption class="caption">
-                <h3>Palácio Dionísio</h3>
-                <p>O palácio Dionísio foi eleito pela revista 'Grandes palácios' como o palácio mais lindo do mundo.</p>
-            </figcaption>
-        </figure>
-
-        <figure class="thumbnail">
-            <img src="img/projetos/residencia-ludi.png" alt="Foto da Residência Ludi">
-            <figcaption class="caption">
-                <h3>Residência Ludi</h3>
-                <p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
-            </figcaption>
-        </figure>
+        <div class="row">
+            <div class="col-sm-6">
+                <figure class="thumbnail">
+                    <img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
+                    <figcaption class="caption">
+                        <h3>Casa Castelo</h3>
+                        <p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-6">
+                <figure class="thumbnail">
+                    <img src="img/projetos/casa-lago.png" alt="Foto da Casa Lago">
+                    <figcaption class="caption">
+                        <h3>Casa Lago</h3>
+                        <p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-6">
+                <figure class="thumbnail">
+                    <img src="img/projetos/mercado-marapira.png" alt="Foto do Mercado Marapira">
+                    <figcaption class="caption">
+                        <h3>Mercado Marapira</h3>
+                        <p>O mercado Marapira foi projetado nos mínimos detalhes na arquitetura baseada em frutas.
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-6">
+                <figure class="thumbnail">
+                    <img src="img/projetos/palacio-dionisio.png" alt="Foto do Palácio Dionísio">
+                    <figcaption class="caption">
+                        <h3>Palácio Dionísio</h3>
+                        <p>O palácio Dionísio foi eleito pela revista 'Grandes palácios' como o palácio mais lindo do mundo.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-6">
+                <figure class="thumbnail">
+                    <img src="img/projetos/residencia-ludi.png" alt="Foto da Residência Ludi">
+                    <figcaption class="caption">
+                        <h3>Residência Ludi</h3>
+                        <p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
     </section>
     <!-- Carousel Depoimentos -->
-    <section id="depoimentos">
-        <h3 class="container titulo-depoimentos">Depoimentos de Clientes </h3>
+    <section class="container" id="depoimentos">
+        <div class="titulo-depoimentos">
+            <h3 class="container">Depoimentos de Clientes</h3>
+        </div>
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -171,54 +183,58 @@
         </div>
     </section>
     <!-- Video institucional -->
-    <section id="videos" class="container">
-        <h2>Vídeo Institucional</h2>
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Hyv5dY38Ep0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>    
-    </section>
-    <!-- Form -->
-    <section id="contato" class="container">
-        <h2>Contato</h2>
-        <p>Entre em contato conosco</p>
-        <form>
-            <div class="form-group">
-                <label for="contato-name"> Nome:</label>
-                <input class="form-control" id="contato-name" type="text" placeholder="Seu nome">
-            </div>    
+    <div class="container">
+        <div class="row">
+            <section id="videos" class="col-sm-6">
+                <h2>Vídeo Institucional</h2>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Hyv5dY38Ep0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>    
+            </section>
+            <!-- Form -->
+            <section id="contato" class="col-sm-6">
+                <h2>Contato</h2>
+                <p>Entre em contato conosco</p>
+                <form>
+                    <div class="form-group">
+                        <label for="contato-name"> Nome:</label>
+                        <input class="form-control" id="contato-name" type="text" placeholder="Seu nome">
+                    </div>    
 
-            <div class="form-group">
-                <label for="contato-email">Email</label>
-                <div class="input-group">
-                        <div class="input-group-addon">@</div>
-                        <input type="email" class="form-control" id="contato-email" placeholder="Seu email">
-                </div>
-            </div>
-            <!-- radio -->
-            <div class="grupo-radio">
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="tipo-pessoa" checked> 
-                        Pessoa Física
-                    </label>
-                </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="tipo-pessoa" checked> 
-                        Pessoa Jurídica
-                    </label>
-                </div>
-            </div><!--
-            
-            --><select class="contato-select form-control">
-                <option disabled selected>Tipo de Situação</option>
-                <option>Casa</option>
-                <option>Apartamento</option>
-                <option>Mansão</option>
-            </select>
-            <button class="btn btn-primary" type="submit">Enviar</button>
-        </form>  
-    </section>
+                    <div class="form-group">
+                        <label for="contato-email">Email</label>
+                        <div class="input-group">
+                                <div class="input-group-addon">@</div>
+                                <input type="email" class="form-control" id="contato-email" placeholder="Seu email">
+                        </div>
+                    </div>
+                    <!-- radio -->
+                    <div class="grupo-radio">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="tipo-pessoa" checked> 
+                                Pessoa Física
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="tipo-pessoa" checked> 
+                                Pessoa Jurídica
+                            </label>
+                        </div>
+                    </div><!--
+                    
+                    --><select class="contato-select form-control">
+                        <option disabled selected>Tipo de Situação</option>
+                        <option>Casa</option>
+                        <option>Apartamento</option>
+                        <option>Mansão</option>
+                    </select>
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </form>  
+            </section>
+        </div>
+    </div>
     <!-- Rodape -->
     <footer>
         <address>
