--- a/AppArquitetura/index.html
+++ b/AppArquitetura/index.html
@@ -34,18 +34,21 @@
                 </div>
             </div>
         </nav>
-        <div class="topCasaFina-banner">
-            <h1>TopCasaFina Arquitetura</h1>
-            <p>Projetando a casa dos sonhos desde 2000 A.C.</p>
-            <button class="btn btn-primary"> Contate-nos agora</button>
+        <!-- top casa fina banner -->
+        <div class="container topCasaFina-bannerWrapper">
+            <div class="topCasaFina-banner">
+                <h1>TopCasaFina Arquitetura</h1>
+                <p>Projetando a casa dos sonhos desde 2000 A.C.</p>
+                <button class="btn btn-primary btn-lg"> Contate-nos agora</button>
+            </div>
         </div>
     </header>
     <!-- Sobre nos -->
     <section class="container" id="sobre-nos">
         <h2>Sobre Nós</h2>   
         <div class="row">
-            <img class="img-responsive col-sm-6" src="img/empresa.jpg"> 
-            <div class="panel-group col-sm-6" id="paineis-sobre">
+            <img class="img-responsive col-sm-6 col-md-4" src="img/empresa.jpg"> 
+            <div class="panel-group col-sm-6 col-md-4" id="paineis-sobre">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title" data-toggle="collapse" data-target="#first" data-parent="#paineis-sobre">Desde 1932</h3>
@@ -90,7 +93,7 @@
     <section id="nossos-projetos" class="container">
         <h2>Nossos Projetos</h2>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4 col-lg-3">
                 <figure class="thumbnail">
                     <img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
                     <figcaption class="caption">
@@ -99,7 +102,7 @@
                     </figcaption>
                 </figure>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4 col-lg-3">
                 <figure class="thumbnail">
                     <img src="img/projetos/casa-lago.png" alt="Foto da Casa Lago">
                     <figcaption class="caption">
@@ -108,7 +111,7 @@
                     </figcaption>
                 </figure>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4 col-lg-3">
                 <figure class="thumbnail">
                     <img src="img/projetos/mercado-marapira.png" alt="Foto do Mercado Marapira">
                     <figcaption class="caption">
@@ -117,7 +120,7 @@
                     </figcaption>
                 </figure>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4 col-lg-3">
                 <figure class="thumbnail">
                     <img src="img/projetos/palacio-dionisio.png" alt="Foto do Palácio Dionísio">
                     <figcaption class="caption">
@@ -126,7 +129,7 @@
                     </figcaption>
                 </figure>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4 col-lg-3">
                 <figure class="thumbnail">
                     <img src="img/projetos/residencia-ludi.png" alt="Foto da Residência Ludi">
                     <figcaption class="caption">
